# mmsegmentation

./: .gitignore  CLAUDE.md  claude_run.sh  convert_json_to_mask.py  generate_zero_masks.py  process_tongue_data.sh  pyproject.toml  【D】可视化探索语义分割数据集.ipynb  【E】准备config配置文件-数据集和pipeline.ipynb  【F1】语义分割算法-UNet.ipynb  安装配置MMSegmentation.ipynb
an-Configs/: AN_UNet_1022.py  AN_UNet_1024.py  AN_UNet_1024_acc_focal.py  AN_UNet_1024_acc_minrun.py  AN_UNet_1024_acc_minrun_v1.py  AN_UNet_1024_acc_minrun_v1_cut85.py  AN_UNet_1024_acc_minrun_v1_cut90.py  AN_UNet_1024_acc_optimizer.py  AN_UNet_1024_acc_v1.py  ZihaoDataset_UNet_20230818.py
an-Configs/reference/: coat_smooth.py
an-Configs/scripts/: README.md  check_dataset_matching.py  check_label.py  convert_mmseg_pth2torchScript.py  convert_pth2torchScript.py  predict_mmseg_torchscript.py  process_tongue_dataset.py
configs/_base_/datasets/: ZihaoDataset_pipeline_anno.py
mmseg/datasets/: ZihaoDataset.py  __init__.py
mmseg/datasets/transforms/: __init__.py  auto_augment.py  processing.py
